--- a/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars.csproj
+++ b/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars.csproj
@@ -197,6 +197,7 @@
     <Content Include="Views\Usuarios\VerificarEmail.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Chat\Index.cshtml" />
+    <Content Include="Views\Usuarios\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -206,6 +207,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="uploads\imagenes\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
