Chat protegido por login - layout corregido de productos - correcion de colores del catalogo - ajuste del titulo catalogo de productos para que sea visible

--- a/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars.csproj
+++ b/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars.csproj
@@ -103,6 +103,7 @@
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
     <Content Include="Assets\css\brand-carousel.css" />
+    <Content Include="Assets\css\catalogo-productos.css" />
     <Content Include="Assets\css\chat-styles.css" />
     <Content Include="Assets\css\footer.css" />
     <Content Include="Assets\css\home.css" />
@@ -141,6 +142,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ChatController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -198,6 +200,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Chat\Index.cshtml" />
     <Content Include="Views\Usuarios\Login.cshtml" />
+    <Content Include="Views\Productos\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
